@@ -1,42 +1,3 @@
-<div class="box">
-	<div class="fullBox">
-		<h1>Welcome to the show.</h1>
-	</div>
-</div>	
-<div class="box home">
-	<div class="sideShow">
-	  <%- if !logged_in? -%>
-  		<h2>The stage is yours!</h2>
-  		<p>Du hast eine Band und willst berühmt werden?  Oder Du kennst eine Band, die Du unbedingt mal live spielen sehen möchtest? Dann registrier dich jetzt kostenlos bei tempodome, promote Deine Band!</p>
-		<%- else -%>
-  		<h2>tempodome für Fans:</h2>
-  		<ul class="norm">
-  			<li>Vote Deine Favoriten auf die Online-Bühne</li>
-  			<li>Finde oder veröffentliche Infos über Deine Lieblings-Künstler</li>
-  			<li>verabrede Dich mit anderen und besuche Konzerte &amp; Events</li>
-  		</ul>
-		<%- end -%>
-	</div>
-</div>
-		
-<div class="box sidebar">	
-	<div class="sideShow">
-		<div class="teaser">
-			<h3>The Wonderwalls</h3>
-			<h4>Die neue Tour kommt!</h4>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-		</div>
-		<div class="teaser">
-			<h3>Jetzt mitmachen und gewinnen</h3>
-			<h4>inlight bringt DEINE Stars auf die Bühne!</h4>
-			<p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.</p>
-			<a href="#" class="teaserLink">anmelden</a>
-		</div>
-		<div class="teaser">
-			<h3>Endlich online!</h3>
-			<h4>inlight ist jetzt am Start</h4>
-			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<a href="#" class="teaserLink">anmelden</a>
-		</div>
-	</div>
-</div>
+<h1>planning game - towel</h1>
+
+<p>here should be some introductory text</p>
