@@ -3,7 +3,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de-de" lang="de-de">
 <head>
-  <title>Inlight - <%=h @page_title || 'we have no slogan' %></title>
+  <title><%=h @page_title || 'planning game' %> - towel</title>
 	<meta http-equiv="content-Language" content="de" />
 	<meta http-equiv="Content-Script-Type" content="text/javascript" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -14,32 +14,24 @@
     <meta name="language" content="de" />
     <meta name="revisit-after" content="7 days" />
     <meta name="robots" content="INDEX,FOLLOW" />
-    <meta name="publisher" content="Inlight http://www.inlight.de" />
-    <meta name="copyright" content="Copyright in 2007 by Inlight http://www.inlight.de" />
-    <meta name="author" content="Inlight http://www.inlight.de" />
+    <meta name="publisher" content="Inlight http://42towels.com" />
+    <meta name="copyright" content="Copyright in 2008 by 42towels" />
+    <meta name="author" content="42towels are Thorsten Böttger and Jochen Kramer" />
 
-    <meta name="DC.Language" content="de" />
-    <meta name="DC.Title" content="Inlight" />
-
-    <meta name="DC.Creator" content="Inlight http://www.inlight.de" />
-    <meta name="DC.Publisher" content="Inlight http://www.inlight.de" />
-    <meta name="DC.Rights" content="Copyright in 2007 by Inlight http://www.inlight.de" />
     <!-- <link rel="icon" href="favicon.ico" type="image/x-icon" /> -->
     <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
-    <link rel="home" href="http://www.inlight.de/" />
-    <link rel="author" href="http://www.inlight.de/" />
-    <link rel="copyright" href="http://www.inlight.de/" />
+    <link rel="home" href="http://42towels.com/" />
+    <link rel="author" href="http://42towels.com/" />
+    <link rel="copyright" href="http://42towels.com/" />
 	
   <!-- <link rel="StyleSheet" href="/stylesheets/inlight.css" type="text/css" /> -->
   <%= stylesheet_link_tag 'yui-reset-fonts-grids' %>
   <%= stylesheet_link_tag 'screen' %>
-	<%= javascript_include_tag "rounded_corners_lite" %>
   <%= javascript_include_tag :defaults %>
 
   <script type="text/javascript" charset="utf-8">
     function executeOnLoad() {
       <%= yield :onload %>
-      roundCorners();
     };
     window.onload = executeOnLoad;
   </script>
@@ -47,7 +39,7 @@
 	<%= yield :head -%>
 </head>
 
-<body id="inlight">
+<body>
   <div id="doc2">
   	<div id="hd">
   	  <div>
