@@ -1,13 +1,13 @@
 <div class="box">
 	<div class="inBox1of2">
-		<h1>My profile</h1>
+		<h1>Your profile</h1>
 		<h2>Name: <%=h @user.display_name %></h2>
 		<p>Member since: <%= display_date(@user.created_at) %></p>
 		<p>
 		 	<%= link_to('Change profile', edit_user_path(@user)) %>
 		</p>
 		
-		<h2>My projects</h2>
+		<h2>Your projects</h2>
 		<ul>
 		  <%- if @projects.empty? -%>
 		    <li>no projects found (<%= link_to('create one', new_project_path) %>)</li>
