@@ -24,6 +24,7 @@
 - improved iteration speed calculation to reflect current day (within the iteration)
 
 CURRENTLY WORKING ON
+- add nice startpage [thorsten, 19.03.2008]
 
 
 TODO
